--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "debug": "^2.6.3",
     "formidable": "^1.2.1",
+    "fs": "^0.0.1-security",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
@@ -23,6 +24,7 @@
     "koa-views": "^5.2.1",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "path": "^0.12.7",
     "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
